# rally-openstack

./: .dockerignore  .gitreview  .zuul.yaml  CHANGELOG.rst  CONTRIBUTING.rst  DOCKER_README.md  Dockerfile  README.rst  bindep.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini  types-requirements.txt  upper-constraints.txt  zuul.yaml
.zuul.d/: README.rst  base.yaml  docker-jobs.yaml  rally-docker-check.yaml  rally-task-barbican.yaml  rally-task-basic-with-existing-users.yaml  rally-task-cinder.yaml  rally-task-designate.yaml  rally-task-heat.yaml  rally-task-ironic.yaml  rally-task-keystone-glance-swift.yaml  rally-task-load-balancing.yaml  rally-task-magnum.yaml  rally-task-manila.yaml  rally-task-mistral.yaml  rally-task-monasca.yaml  rally-task-murano.yaml  rally-task-neutron-trunk.yaml  rally-task-neutron-with-extensions.yaml  rally-task-neutron.yaml  rally-task-nova.yaml  rally-task-octavia.yaml  rally-task-senlin.yaml  rally-task-simple-job.yaml  rally-task-telemetry.yaml  rally-task-watcher.yaml  rally-task-zaqar.yaml  rally-tox-functional.yaml  rally-verify-tempest.yaml  zuul.yaml
devstack/: README.rst  features.yaml  plugin.sh
devstack/lib/: rally
doc/source/: feature_requests.rst
etc/: motd
etc/rally/: rally-config-generator.conf  rally.conf.sample
rally-jobs/: barbican.yaml  basic-with-existing-users.yaml  certifcation_task_args.yaml  cinder.yaml  designate.yaml  ironic.yaml  keystone-glance-swift.yaml  load-balancing.yaml  magnum.yaml  neutron-trunk.yaml  neutron-with-extensions.yaml  neutron.yaml  nova.yaml  octavia.yaml  rally-magnum.yaml  senlin.yaml  simple-cinder.yaml  simple-job.yaml  telemetry.yaml
rally-jobs/extra/: autoscaling_group.yaml.template  resource_group_server_with_volume.yaml.template  server_with_ports.yaml.template  server_with_volume.yaml.template
rally_openstack/: __init__.py  _compat.py  consts.py  credential.py  exceptions.py  osclients.py  scenario.py  types.py  validators.py
rally_openstack/cfg/: opts.py  tempest.py
rally_openstack/cleanup/: manager.py  resources.py
rally_openstack/common/: consts.py  credential.py  osclients.py  validators.py
rally_openstack/common/cfg/: glance.py  neutron.py  nova.py  octavia.py  opts.py  tempest.py
rally_openstack/common/wrappers/: network.py
rally_openstack/contexts/: api_versions.py
rally_openstack/contexts/ceilometer/: samples.py
rally_openstack/contexts/cinder/: volume_types.py  volumes.py
rally_openstack/contexts/cleanup/: admin.py  base.py  user.py
rally_openstack/contexts/dataplane/: heat.py
rally_openstack/contexts/designate/: zones.py
rally_openstack/contexts/ec2/: servers.py
rally_openstack/contexts/glance/: images.py
rally_openstack/contexts/heat/: stacks.py
rally_openstack/contexts/keystone/: roles.py  users.py
rally_openstack/contexts/magnum/: ca_certs.py  cluster_templates.py  clusters.py
rally_openstack/contexts/manila/: manila_security_services.py  manila_share_networks.py  manila_shares.py
rally_openstack/contexts/monasca/: metrics.py
rally_openstack/contexts/murano/: murano_environments.py  murano_packages.py
rally_openstack/contexts/network/: allow_ssh.py  existing_network.py  networking_agents.py  networks.py  routers.py
rally_openstack/contexts/neutron/: lbaas.py
rally_openstack/contexts/nova/: flavors.py  keypairs.py  servers.py
rally_openstack/contexts/quotas/: quotas.py
rally_openstack/contexts/sahara/: sahara_cluster.py  sahara_image.py  sahara_input_data_sources.py  sahara_job_binaries.py  sahara_output_data_sources.py
rally_openstack/contexts/senlin/: profiles.py
rally_openstack/contexts/swift/: objects.py  utils.py
rally_openstack/contexts/vm/: custom_image.py  image_command_customizer.py
rally_openstack/contexts/watcher/: audit_templates.py
rally_openstack/embedcharts/: osprofilerchart.py
rally_openstack/hook/: fault_injection.py
rally_openstack/scenarios/: dummy.py
rally_openstack/scenarios/authenticate/: authenticate.py
rally_openstack/scenarios/barbican/: containers.py  orders.py  secrets.py  utils.py
rally_openstack/scenarios/ceilometer/: alarms.py  events.py  meters.py  queries.py  resources.py  samples.py  stats.py  traits.py  utils.py
rally_openstack/scenarios/cinder/: qos_specs.py  utils.py  volume_backups.py  volume_types.py  volumes.py
rally_openstack/scenarios/designate/: basic.py  utils.py
rally_openstack/scenarios/ec2/: servers.py  utils.py
rally_openstack/scenarios/elasticsearch/: logging.py
rally_openstack/scenarios/glance/: images.py  utils.py
rally_openstack/scenarios/gnocchi/: archive_policy.py  archive_policy_rule.py  capabilities.py  metric.py  resource.py  resource_type.py  status.py  utils.py
rally_openstack/scenarios/grafana/: metrics.py
rally_openstack/scenarios/heat/: stacks.py  utils.py
rally_openstack/scenarios/ironic/: nodes.py  utils.py
rally_openstack/scenarios/keystone/: basic.py  utils.py
rally_openstack/scenarios/magnum/: cluster_templates.py  clusters.py  k8s_pods.py  utils.py
rally_openstack/scenarios/manila/: shares.py  utils.py
rally_openstack/scenarios/mistral/: executions.py  utils.py  workbooks.py
rally_openstack/scenarios/monasca/: metrics.py  utils.py
rally_openstack/scenarios/murano/: environments.py  (+2 more)
rally_openstack/task/: context.py  scenario.py  types.py
rally_openstack/wrappers/: network.py
samples/deployments/: README.rst  existing-api.json  existing-keystone-v3-user.json
samples/tasks/: README.rst
tasks/openstack/: task.yaml
tests/check_samples/: test_certification_task.py  test_task_samples.py
tests/ci/: cover.sh  osresources.py  pytest_launcher.py  rally_functional_job.sh  rally_verify.py  sync_requirements.py
tests/functional/: test_certification_task.py  test_cli_deployment.py  test_cli_env.py  test_cli_task.py  test_task_samples.py  utils.py
tests/hacking/: checks.py
tests/unit/: fakes.py  test.py  test__compat.py  test_credential.py  test_osclients.py  test_plugins.py  test_scenario.py  test_service.py  test_types.py  test_validators.py  test_workarounds.py
(+1346 files in other folders)
