[metadata]
name = rally-openstack
summary = Rally plugins for OpenStack platform
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/rally/latest/
license = Apache License, Version 2.0
classifier =
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    rally_openstack

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
rally_plugins =
    path = rally_openstack
    options = rally_openstack.cfg.opts:list_opts

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
