[metadata]
name = rally-openstack
summary = Rally plugins for OpenStack platform
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/rally/latest/
license = Apache License, Version 2.0
python_requires = >=3.8
classifier =
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[files]
packages =
    rally_openstack

[entry_points]
rally_plugins =
    path = rally_openstack
    options = rally_openstack.common.cfg.opts:list_opts
oslo.config.opts =
    rally_openstack = rally_openstack.common.cfg.opts:list_opts
